# ccdata

./: .dockerignore  .env.example  .env.local-lite.example  .env.production.example  .gitignore  LICENSE  Makefile  README.md  REDMI.md  docker-compose.local-full.yml  docker-compose.local-lite.yml  docker-compose.production.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-full.txt  requirements.lock.txt
.github/workflows/: ci.yml.disabled
airflow/: Dockerfile
airflow/dags/: _common.py  admissions_monitor.py  daily_news_crawl.py  jobs_monitor.py  monthly_full_crawl.py  news_monitor.py  pipeline_monitoring_dashboard.py  realtime_user_registration_crawl.py  research_monitor.py  weekly_job_updates.py
docker/: Dockerfile.browser-worker  Dockerfile.core  Dockerfile.worker
docs/: admin-review-workflow.md  data-pipeline.md  docker-optimization.md  docker-size-report.md  local-lite-setup.md  local-lite-verification-report.md  no-docker-setup.md  no-docker-verification-report.md  optimization-audit.md  webclaw-integration.md
migrations/: 2026_05_05_lite_freshness.sql  2026_05_17_admissions.sql  2026_05_17_jobs.sql  2026_05_17_news.sql  2026_05_17_research.sql
nutch/conf/: nutch-site.xml
scripts/: docker_size_report.py  validate_local_lite.py  validate_no_docker.py
services/: Dockerfile  Dockerfile.playwright  requirements-browser.txt  requirements-worker.txt  requirements.txt
services/admissions/: __init__.py  crawler.py
services/ai_enrichment/: main.py
services/college_page_service/: main.py
services/common/: config.py  db.py  kafka_client.py  security.py  user_agents.py
services/crawler/: main.py
services/deep_crawler/: __init__.py  crawler.py
services/extraction/webclaw_adapter/: fallback_extractor.py  webclaw_adapter.py
services/freshness_monitor/: main.py
services/institutions/: __init__.py  crawler.py
services/jobs/: __init__.py  crawler.py
services/lite_pipeline/: api.py  main.py
services/news/: __init__.py  crawler.py
services/nutch_bridge/: main.py
services/parser_engine/: main.py
services/research/: __init__.py  crawler.py
services/review_ingestion/: main.py
services/schema_mapper/: main.py
services/search_engine/: main.py
services/seed_loader/: main.py
sql/: init.sql
tests/: test_admissions_module.py  test_credentials.py  test_deep_crawler.py  test_fallback_extractor_fixture.py  test_institution_crawler.py  test_jobs_module.py  test_lite_pipeline_integration.py  test_news_module.py  test_no_docker_offline.py  test_phase10_real_site_tuning.py  test_phase11_review_workflow.py  test_phase13_api_testclient.py  test_phase14_queue_scheduler.py  test_phase15_scheduler_policy.py  test_phase16_observability.py  test_phase17_freshness_integrity.py  test_phase18_robustness_search.py  test_phase19_public_index.py  test_phase20_multi_category.py  test_phase5_source_registry.py  test_phase7_multipage.py  test_phase8_pilot.py  test_phase9_ops.py  test_research_module.py  test_user_agents.py  test_webclaw_adapter.py
tests/fixtures/: college_sample.html
(+15 files in other folders)
