[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collegecue-automation"
version = "0.3.0"
description = "Optimized crawler and extraction pipeline"
requires-python = ">=3.10"
dependencies = [
  "httpx==0.28.1",
  "pydantic==2.11.4",
  "beautifulsoup4==4.13.3",
  "lxml==5.3.1",
  "tenacity==9.1.2",
  "psycopg[binary]==3.2.3",
  "python-dotenv==1.0.1",
  "redis==5.2.1",
  "rq==1.16.2",
  "w3lib==2.2.1",
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "pytest-asyncio==0.26.0",
  "pytest-httpx==0.35.0",
  "coverage==7.8.0",
  "respx==0.22.0"
]

[dependency-groups]
dev = [
  "pytest==8.3.5",
  "pytest-asyncio==0.26.0",
  "pytest-httpx==0.35.0",
  "coverage==7.8.0",
  "respx==0.22.0"
]

[tool.setuptools]
packages = ["services"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: integration tests that may require docker/postgres/redis"
]
addopts = "-m 'not integration'"
